allowing cors for development

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.11.7"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.6"
   }
